# Parrot-GPS

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
include/gps_communication/: dichiarazioni.h
msg/: Coordinate_utm.msg  Coordinate_utm.msg~
src/: line_equation.cpp~  main_function.cpp  main_function_ok.cpp  main_function_stefano.cpp  points.txt  points_arc.txt  read_waypoints.cpp  sdg.cpp~  subscriber_gps.cpp~  waypoint_generator.cpp~
