<?xml version="1.0"?>
<package>
  <name>gps_communication</name>
  <version>0.0.0</version>
  <description>The gps_communication package</description>

  <maintainer email="stefano.bertalmio@gmail.com">stefano</maintainer>


 <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>ardrone_autonomy-gps</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  

  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>ardrone_autonomy-gps</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

 
  <export>
  
  </export>
</package>
